; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/i386/extr_i386rtl.c_sound.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/i386/extr_i386rtl.c_sound.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sound(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp eq i32 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = call i32 @READ_PORT_UCHAR(i32 97)
  %8 = and i32 %7, -4
  %9 = call i32 @WRITE_PORT_UCHAR(i32 97, i32 %8)
  br label %23

10:                                               ; preds = %1
  %11 = load i32, i32* %2, align 4
  %12 = sdiv i32 1193046, %11
  store i32 %12, i32* %3, align 4
  %13 = call i32 @WRITE_PORT_UCHAR(i32 67, i32 182)
  %14 = load i32, i32* %3, align 4
  %15 = and i32 %14, 255
  %16 = call i32 @WRITE_PORT_UCHAR(i32 66, i32 %15)
  %17 = load i32, i32* %3, align 4
  %18 = ashr i32 %17, 8
  %19 = call i32 @WRITE_PORT_UCHAR(i32 66, i32 %18)
  %20 = call i32 @READ_PORT_UCHAR(i32 97)
  %21 = or i32 %20, 3
  %22 = call i32 @WRITE_PORT_UCHAR(i32 97, i32 %21)
  br label %23

23:                                               ; preds = %10, %6
  ret void
}

declare dso_local i32 @WRITE_PORT_UCHAR(i32, i32) #1

declare dso_local i32 @READ_PORT_UCHAR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
